# stockscratch

./: .gitignore  README.md  main.py  pyproject.toml
data/: russell_1000.csv
scripts/: refresh_data.py
